# cccengine

./: .gitignore  CHANGELOG.md  Item.py  LICENSE  pyproject.toml
cccengine/: EventHandler.py  Inventory.py  Item.py  Player.py  PlayerCastEvent.py  Sprite.py  __init__.py
cccengine/audio/: AudioManager.py
cccengine/editor/: Editor.py  template.json  test.json
cccengine/entities/: Entity.py  Player.py
cccengine/events/: ButtonClickEvent.py  Event.py  EventHandler.py  EventListener.py  GuiOpenEvent.py  PlayerCastEvent.py  SoundPlayEvent.py
cccengine/gui/: Button.py  Gui.py  GuiManager.py
cccengine/quests/: Quest.py  QuestHandler.py  QuestIndex.py
cccengine/renderer/: chunk.py  map.py  tile.py
gui/: Gui.py
