[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
dependencies = ["pygame"]

name = "cccengine"
description = 'CCC game engine, built on pygame'
version = "0.0.1"
authors = [
    { name = "dalmatheo", email = "134540422+dalmatheo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13.1"
keywords = ["pygame", "game", "engine"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/Crocodile-Coding-Club/cccengine"
Issues = "https://github.com/Crocodile-Coding-Club/cccengine/issues"
